tests/fixtures/invalid/direct_pointer_to_pointer_typedef.c
typedef int **IntPtrPtr;

int main() {
    return 0;
}
